[package]
name = "libecpint-rust"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Toy project from https://github.com/dtolnay/cxx"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/dtolnay/cxx"

[dependencies]
cxx = "1.0"
autocxx = "0.26.0"
miette = "5.0"


[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
